<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
     />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_name"
        />

    <Button
        android:id="@+id/nextBtnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/cardview_light_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/next" />

</LinearLayout>